Uploaded image for project: 'Qt Creator'
  1. Qt Creator
  2. QTCREATORBUG-18091

Wrong XCode version detected when running application

    XMLWordPrintable

Details

    • Bug
    • Resolution: Done
    • Not Evaluated
    • Qt Creator 4.5.0-rc1
    • Qt Creator 4.3.0-rc1
    • iOS Support
    • None
    • macOS 10.11

    Description

      I previously had installed XCode 7.3.1 via app store. I had trouble upgrading that via the app store app, so I downloaded manually XCode 8.2.1 and replaced the old one. Sometimes I also switch manually the xcode version using xcode-select.

      When I deploy / run an iOS application on the simulator, Qt Creator complains with

      Starting remote process.
      Cannot capture console output from sd.minibrowser. Install Xcode 8 or later.Run ended.
      

      That is because the iOS plugin checks the installed xcode version using

       pkgUtilProcess.runBlocking("pkgutil", QStringList("--pkg-info-plist=com.apple.pkg.Xcode"));
      

      Obviously that reports the old 7.3.1 version that was installed via the app store.

      I would propose to switch the version parsing to use the current PATH result of xcodebuild --version instead.

      Attachments

        For Gerrit Dashboard: QTCREATORBUG-18091
        # Subject Branch Project Status CR V

        Activity

          People

            vikas Vikas Pachdha
            alexandru.croitor Alexandru Croitor
            Votes:
            0 Vote for this issue
            Watchers:
            1 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes