Ios: Fix incorrect Xcode version detected

pkgutil always return the Xcode path installed via app store

Task-number: QTCREATORBUG-18091
Change-Id: I47b5a9c3f3a482feea2dc903dbff3441a3930ab6
Reviewed-by: Jake Petroules <jake.petroules@qt.io>